画像をダウンロード 少しスタイリングした

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tpage</title>
+  <title>Tprog</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Tpage</h1>
-    <p>学校で学べるプログラミング</p>
-    <img src="プログラムアイコン.png" alt="">
+    <div class="header">
+      <h1>Tprog</h1>
+      <p class="subTitle">学校で学べるプログラミング</p>
+      <img src="プログラムアイコン.png" alt="" class="progIcon">
+    </div>
+    
   </header>
   <main>
     <section>
@@ -35,9 +38,11 @@
     </section>
   </main>
   <footer>
-    <img src="twitterのアイコン素材 その2.png" alt="">
-    <img src="Instagram-Icon.png" alt="">
-    <img src="FACEBOOK風のアイコン素材.png" alt="">
+    <div class="footer">
+      <img src="twitterのアイコン素材 その2.png" alt="">
+      <img src="Instagram-Icon.png" alt="">
+      <img src="FACEBOOK風のアイコン素材.png" alt="">
+    </div>
     <p>@Tprog.com</p>
   </footer>
   <script src="main.js"></script>
