--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <div class="header">
       <h1>Tprog</h1>
       <p class="subTitle">学校で学べるプログラミング</p>
-      <img src="プログラムアイコン.png" alt="" class="progIcon">
+      <img src="public/プログラムアイコン.png" alt="" class="progIcon">
     </div>
     
   </header>
   <main>
     <section>
       <div>
+        <img src="public/slide1.jpg" alt="">
+        <img src="public/slide2.jpg" alt="">
+        <img src="public/slide3.jpg" alt="">
+        <img src="public/slide4.jpg" alt="">
       </div>
       <div>
         <h2>Tprogはプログラミングを全国に普及する活動をしています。</h2>
@@ -39,9 +43,9 @@
   </main>
   <footer>
     <div class="footer">
-      <img src="twitterのアイコン素材 その2.png" alt="">
-      <img src="Instagram-Icon.png" alt="">
-      <img src="FACEBOOK風のアイコン素材.png" alt="">
+      <img src="public/twitterのアイコン素材 その2.png" alt="">
+      <img src="public/Instagram-Icon.png" alt="">
+      <img src="public/FACEBOOK風のアイコン素材.png" alt="">
     </div>
     <p>@Tprog.com</p>
   </footer>
