矢印アイコン導入

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   </header>
   <main>
     <section>
-      <div>
-        <img src="public/slide1.jpg" alt="">
-        <img src="public/slide2.jpg" alt="">
-        <img src="public/slide3.jpg" alt="">
-        <img src="public/slide4.jpg" alt="">
+      <div class="slides">
+        <img src="public/slide1.jpg" alt="" width="1044" height="586">
+        <img src="public/slide2.jpg" alt=""width="1044" height="586">
+        <img src="public/slide3.jpg" alt=""width="1044" height="586">
+        <img src="public/slide4.jpg" alt=""width="1044" height="586">
+        <img src="public/icon_122530_256 3.png" alt=""width="64" height="64">
+        <img src="public/icon_122530_256 3.png" alt=""width="64" height="64">
       </div>
       <div>
         <h2>Tprogはプログラミングを全国に普及する活動をしています。</h2>
@@ -43,9 +45,9 @@
   </main>
   <footer>
     <div class="footer">
-      <img src="public/twitterのアイコン素材 その2.png" alt="">
-      <img src="public/Instagram-Icon.png" alt="">
-      <img src="public/FACEBOOK風のアイコン素材.png" alt="">
+      <img src="public/twitterのアイコン素材 その2.png" alt="" width="76" height="76">
+      <img src="public/Instagram-Icon.png" alt="" width="76" height="76">
+      <img src="public/FACEBOOK風のアイコン素材.png" alt="" width="76" height="76">
     </div>
     <p>@Tprog.com</p>
   </footer>
